--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "csurf": "^1.10.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.16.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.5.5",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
